--- a/example.env
+++ b/example.env
@@ -1,8 +1,8 @@
 HTPASSWD=test:$apr1$61tiBCzL$vQyprSbMTjgJ3ZizgHIxa1
-CONFIG=./config
-DOWNLOAD=./downloads
-DATA=./data
+CONFIG=/Share/Containers/
+DOWNLOAD=/Share/Multimedia/Downloads
+DATA=/Share/Containers/Data
 DOMAIN=example.com
-TZ=Europe/London
-PGID=99
-PUID=100
+TZ=America/Los_Angeles
+PGID=1000
+PUID=1000
